--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/password-strength": "^6.0.0",
     "@angular/animations": "~9.1.0",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
     "@angular/fire": "^6.0.0",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/forms": "~9.1.0",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "firebase": "^7.14.6",
+    "ngx-auth-firebaseui": "^4.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
