--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@auth0/angular-jwt": "^4.1.2",
     "firebase": "^7.14.6",
     "ngx-auth-firebaseui": "^4.3.0",
     "rxjs": "~6.5.4",
