--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.0",
     "@auth0/angular-jwt": "^4.1.2",
     "firebase": "^7.14.6",
+    "ng-recaptcha": "^5.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
